<resources>
    <string name="app_name">smartOrder</string>
    <string name="logintext">Iniciar sesión</string>
    <string name="emailinputText">Correo eléctronico</string>
    <string name="password">Contraseña</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="registrarse">Registrate</string>
    <string name="singin">Registrarse</string>
    <string name="remembersession">Recordar sesión</string>
    <string name="info">Ingresa con tu correo eléctronico y contraseña, en caso de no recordar la contraseña, preciona aquí</string>
    <string name="name">nombre</string>
    <string name="cellphone">Número de telefono</string>
    <string name="fatherName">Apellido paterno</string>
    <string name="motherName">Apellido materno</string>
    <string name="nombre_del_restaurante">Nombre del Restaurante</string>
    <string name="abierto">Abierto</string>
    <string name="men">Menú</string>
    <string name="historial">Historial</string>
    <string name="logoutText">Cerrar sesión</string>
    <string name="gestionar_reservas">Gestionar reservas</string>
    <string name="ir_al_carrito">Ir al carrito</string>
    <string name="restaurante">Restaurante</string>
    <string name="guardar_reservaci_n">Guardar Reservación</string>
    <string name="solicitar_reservaci_n">Solicitar reservación</string>
    <string name="eliminar_producto_s">Eliminar producto(s)</string>
    <string name="mi_carrito">Mi carrito</string>
    <string name="_0_00">$0.00</string>
    <string name="subtotal">Subtotal</string>
    <string name="proceder_a_la_reserva">Proceder a la reserva</string>
    <!-- res/values/strings.xml -->

    <string-array name="theme_options">
        <item>Claro</item>
        <item>Oscuro</item>
        <item>Predeterminado del sistema</item>
    </string-array>

</resources>